# SmartPowerElectricAPI/Models/Usuario.cs
@@ -26,4 +26,7 @@ public class Usuario
     public DateTime? FechaEliminado { get; set; }
 
     public bool? Eliminado { get; set; }
+
+
+    public string fechaAlta { get { return FechaCreacion?.ToString("MM/dd/yyyy", System.Globalization.CultureInfo.InvariantCulture) ?? string.Empty; } }
 }
